# CC_Loto

./: .gitignore  6.3.0  CLAUDE.md  DATA.csv  README.md  app.py  gui.py  orchestrator.py  pyproject.toml  requirements.txt  run_cli.py  run_tests.py  stat.py  stat_report.py
.github/workflows/: ci.yml
docs/: AS-IS.md  GUI_PLAN.md  GUI_PLAN_V2.md  PROGRESS.md  ROADMAP.md  SRS.md  TDD_PLAN.md  User_manual.md  architectural_and_functional_analysis.md  architecture.md  installation_guide.md
opt/: __init__.py  opt_calibration.py  opt_config.py  opt_data.py  opt_diagnostics.py  opt_engine.py  opt_features.py  opt_state.py  opt_strategies.py
src/dynamix/: candidate_grid.py  constants.py  darts_core.py  data_utils.py  device.py  dynamix_core.py  pce_narx.py  plotting.py  stat.py
tests/: __init__.py  _builders.py  _cfg.py  _typing.py  _util.py  test_checkpoint_loop.py
tests/contract/: __init__.py  test_candidate_grid_golden.py  test_final_summary_scoreboard.py  test_grid_dedupe.py  test_logging_unified.py  test_no_dead_config_aliases.py  test_opt_data_contract.py  test_opt_fingerprint.py  test_opt_slicing.py  test_optimizer_choices.py  test_repo_artifacts.py
tests/core_unit/: __init__.py  test_constants.py  test_data_utils.py  test_device.py  test_opt_engine_math.py  test_opt_state_timestamp_parse.py  test_opt_strategies_formatting.py  test_packaging.py  test_poisson_binomial.py
tests/integration/: __init__.py  test_entrypoints_import.py  test_gui_packaging.py  test_integration.py  test_integration_opt_end_to_end.py  test_optimizer_determinism.py  test_orchestrator_uses_module.py  test_stat_logic.py
tests/optimization/: __init__.py  test_baseline.py  test_economics.py  test_engine_scoring.py  test_evolutionary.py  test_opt_engine_fit_and_fallback.py  test_opt_strategies_invariants.py  test_qany_calibration.py
tests/optional/: __init__.py  test_darts_core.py  test_dynamix_core.py  test_opt_diagnostics_reliability_plot_optional.py  test_pce_narx.py  test_plotting.py
tests/state_integrity/: __init__.py  (+2 more)
(+28 files in other folders)
